      a false positive for minified javascript and missing sources.
      (Closes: #742693).
    + [BR] Do not remove newline with c++ comments.  Fix a false
      positive.
    + [BR] Fix a GFDL detection false positive in texlive.  Thanks
      to Norbert Preining.  (Closes: #743754).
    + [BR] Fix another false positives in GFDL detection.
  * checks/files.pm:
    + [BR] Use Lintian::Data for detecting embedded library.
    + [BR] Add context in embedded lib tagging.
  * checks/fields.{desc,pm}:
    + [NT] Apply patch from Johannes Schauer to rename "notest"
      build-profile to "nocheck".  (Closes: #743840)
    + [NT] Support giving replacements for obsolete packages.
  * checks/init.d.{desc,pm}:
    + [BR] Detect $all virtual dependency in legacy init scripts.
      Thanks to Holger Levsen.  (Closes: #737867).
  * checks/java.{desc,pm}:
    + [SL] Do not trigger a warning when a jar is not in
      /usr/share/java and the package name matches
      lib.*maven.*plugin.*java.  (Closes: #743446).
    + [SL] Catch uses of Java8 byte code.  (Closes: #743384).
    + [SL] Warn that the suggests/recommends on libservlet[\d\.]+-java is
      needless (Closes: #743453)
  * checks/source-copyright.pm:
    + [NT] Permit the use of "https://" in DEP-5 format URIs even
      if the policy suggests that they have to use "http://".
      (Closes: #744981)

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of polarssl.
    + [RG] Don't detect mariadb as embedder of mysql.
  * data/fields/obsolete-packages:
    + [NT] Add hardening-includes and hardening-wrapper on request of
      Thijs Kinkhorst.  (Closes: #711193)
  * data/java/constants:
    + [SL] introduce this file to specify JDK values

  * debian/control:
    + [NT] Add Build-Depends on po4a.
  * debian/lintian.install:
    + [NT] Install translations.
  * debian/{lintian.,source/}lintian-overrides:
    + [NT] Add overrides for using hardening-includes.
  * debian/rules: